--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Siyah overlay */
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 2;
 }
 
@@ -67,7 +67,7 @@ body, html {
     overflow: hidden;
 }
 
-.ip-info {
+.ip-info, #location-info {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,4 +76,5 @@ body, html {
     height: 100%;
     color: white;
     font-size: 56px;
+    font-family: Arial, sans-serif;
 }
